--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Jeetaditya Chatterjee <jeetelongname@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+ropes = "^0.1"
+antigravity = "^0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
